# Sentinel

./: .env.example  .gitignore  BUG_REPORT.md  LICENSE  QUICK_START.md  README.md  RUN_DASHBOARD.md  SETUP_GUIDE.md  WORK_SUMMARY.md  pyrightconfig.json  scratch_features.py  seed_admin.py
backend/: .dockerignore  _test_conn.py  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py  redis_client.py
backend/app/core/: metrics.py  rate_limit.py
backend/app/detectors/: cusum.py  isolation_forest.py  js_divergence.py  ks_test.py  page_hinkley.py  psi.py
backend/app/middleware/: auth_middleware.py  logging_middleware.py
backend/app/models/: alert.py  base.py  baseline.py  calibration_curve.py  drift_event.py  drift_threshold.py  model_registry.py  prediction.py  user.py
backend/app/novelties/: calibration_report.py  drift_classifier.py  ewma_thresholds.py  shap_attribution.py  stl_decomposition.py
backend/app/routers/: alerts.py  auth.py  calibration.py  drift.py  inference.py  models.py  predictions.py  websocket.py
backend/app/schemas/: calibration.py
backend/app/services/: alert_service.py  auth_service.py  baseline_service.py
backend/app/tasks/: celery_app.py  drift_check.py  shap_compute.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_stl_decomposition.py  003_add_calibration.py
backend/scripts/: demo_reset.py
backend/tests/integration/: test_ingest_api.py
backend/tests/unit/: test_baseline_service.py  test_calibration_report.py  test_calibration_router.py  test_cw_psi.py  (+6 more)
(+60 files in other folders)
