[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-backend"
version = "0.1.0"
description = "Sentinel backend service"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "sqlalchemy==2.0.23",
  "alembic==1.12.1",
  "psycopg[binary]==3.1.17",
  "pydantic==2.5.0",
  "pydantic-settings==2.1.0",
  "redis==5.0.1",
  "celery==5.3.4",
  "scipy==1.11.4",
  "scikit-learn==1.3.2",
  "numpy==1.26.2",
  "pandas==2.1.3",
  "shap==0.43.0",
  "statsmodels==0.14.0",
  "sentry-sdk==1.38.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "structlog==23.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.25.0",
  "ruff>=0.1.0",
  "mypy>=1.8.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
